few shot learning

--- a/code/pc-audio-kbm-cmp.ipynb
+++ b/code/pc-audio-kbm-cmp.ipynb
@@ -123,8 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MKNP KBM Data\n",
-    "# get all species\n",
+    "# MKNP ARU Data\n",
     "mknp_aru = pd.read_csv('../annotations/mknp-aru-2017-2018.csv')\n",
     "mknp_aru_species = species_from_df(mknp_aru)"
    ]
