removed redundant sections

--- a/code/birdnet-perch-comp.ipynb
+++ b/code/birdnet-perch-comp.ipynb
@@ -19,12 +19,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-04 13:46:46.799693: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-01-04 13:46:46.799741: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-01-04 13:46:46.801254: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-01-04 13:46:46.810140: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-01-04 14:24:45.211796: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-01-04 14:24:45.211852: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-01-04 14:24:45.213540: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-01-04 14:24:45.222435: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-01-04 13:46:47.713142: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2025-01-04 14:24:46.106407: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f39c07d1-d166-4e8b-b257-7355a77a38ad",
+   "id": "9f94b9e8-83c6-4fb8-bc26-2b11a7463a11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,40 +71,13 @@
     "            sps += df.iloc[i]['Foreground Species'].split(';')\n",
     "        if not pd.isna(df.iloc[i]['Background Species']):\n",
     "            sps += df.iloc[i]['Background Species'].split(';')\n",
-    "    return list(set(sps))\n",
-    "\n",
-    "def get_opt_thresh(y_train, y_pred):\n",
-    "    '''\n",
-    "    Get the optimal probability threshold for sigmoid output\n",
-    "    '''\n",
-    "    num_points = 1000\n",
-    "    thresh = np.linspace(.01,1, num_points)\n",
-    "    acc = np.zeros(num_points)\n",
-    "    \n",
-    "    for i, th in enumerate(thresh):\n",
-    "        acc[i] = accuracy_score(y_train, (y_pred > th).astype(int))\n",
-    "    return thresh[np.argmax(acc)]\n",
-    "\n",
-    "def create_model(hidden_layers, input_size, output_size):\n",
-    "    '''\n",
-    "    Create an MLP\n",
-    "    '''\n",
-    "    model = Sequential()\n",
-    "    if len(hidden_layers):\n",
-    "        model.add(Dense(hidden_layers[0], input_dim=input_size, kernel_initializer='he_uniform', activation='relu'))\n",
-    "    for indx, hl in hidden_layers[1:]:\n",
-    "        model.add(Dense(hidden_layers[indx], input_dim=hidden_layers[indx - 1], kernel_initializer='he_uniform', activation='relu'))\n",
-    "\n",
-    "    model.add(Dense(output_size, activation='sigmoid'))\n",
-    "    model.compile(loss='binary_crossentropy', optimizer='adam')\n",
-    "    return model\n",
-    "    "
+    "    return list(set(sps))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4f7389f5-e589-41cc-b4e2-4ac66cc1764a",
+   "id": "143c03bb-7afd-40d7-b5ce-f2788e5c1c94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a4d59280-10f6-445c-b2e3-80a99f14a179",
+   "id": "1d1ce3e6-0d33-4d54-9167-f7db0e54c793",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "70958acc-c94c-44e0-a3f4-92493cab4871",
+   "id": "54dd16f6-db41-41fb-bb32-7292d6f3068f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "875365a0-901e-48ea-964a-63ed91af4eef",
+   "id": "60ea43fe-ae96-4c5d-9c1c-111620c87d3b",
    "metadata": {},
    "outputs": [],
    "source": [
