remove unnecessary import and add explanation

--- a/code/birdnet-perch-comp.ipynb
+++ b/code/birdnet-perch-comp.ipynb
@@ -6,7 +6,14 @@
    "metadata": {},
    "source": [
     "# Comparison of BirdNET, Perch and Finetuned model performance on Kenyan Species\n",
-    "This notebook is used to generate tables comparing the performance on BirdNET, Perch and a multi-label model trained using Perch embeddings to classify species from the Mt Kenya ecosystem."
+    "This notebook is used to generate tables comparing the performance on BirdNET, Perch and a multi-label model trained using Perch embeddings to classify species from the Mt Kenya ecosystem.\n",
+    "\n",
+    "To run these notebook, results from BirdNET, Perch and the finetuned model must first be obtained by running to following.\n",
+    "\n",
+    "\n",
+    "* `python birdnet_eval.py -i ../audio/ -a ../annotations/`\n",
+    "* `python bvc_eval.py -i ../audio/ -a ../annotations/`\n",
+    "* `mlp-multi-species.ipynb`"
    ]
   },
   {
@@ -19,12 +26,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-04 14:24:45.211796: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-01-04 14:24:45.211852: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-01-04 14:24:45.213540: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-01-04 14:24:45.222435: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-02-27 09:25:37.333880: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-02-27 09:25:37.356946: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-02-27 09:25:37.356970: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-02-27 09:25:37.357559: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-02-27 09:25:37.361158: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-02-27 09:25:37.361826: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-01-04 14:24:46.106407: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2025-02-27 09:25:37.965857: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -49,9 +58,8 @@
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from multilabel_mlp import *\n",
     "\n",
-    "from keras.utils import to_categorical, set_random_seed\n"
+    "from keras.utils import to_categorical, set_random_seed"
    ]
   },
   {
@@ -296,28 +304,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ftei-dsw/bird-recog/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ftei-dsw/bird-recog/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ftei-dsw/bird-recog/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ftei-dsw/bird-recog/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ftei-dsw/bird-recog/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ftei-dsw/bird-recog/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ftei-dsw/bird-recog/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ftei-dsw/bird-recog/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ftei-dsw/bird-recog/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ftei-dsw/bird-recog/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ftei-dsw/bird-recog/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+      "/home/ftei-dsw/Documents/Research/envs/tf-env/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/ftei-dsw/Documents/Research/envs/tf-env/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/ftei-dsw/Documents/Research/envs/tf-env/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/ftei-dsw/Documents/Research/envs/tf-env/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/ftei-dsw/Documents/Research/envs/tf-env/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/ftei-dsw/Documents/Research/envs/tf-env/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/ftei-dsw/Documents/Research/envs/tf-env/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/ftei-dsw/Documents/Research/envs/tf-env/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/ftei-dsw/Documents/Research/envs/tf-env/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/ftei-dsw/Documents/Research/envs/tf-env/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/ftei-dsw/Documents/Research/envs/tf-env/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/ftei-dsw/Documents/Research/envs/tf-env/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/ftei-dsw/Documents/Research/envs/tf-env/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1471: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
@@ -412,13 +424,13 @@
       "Common Name & Number of Recordings & BirdNET Precision & BirdNET Recall & BirdNET F1-Score & Perch Precision & Perch Recall & Perch F1-Score & MLP F1-Score \\\\\n",
       "\\midrule\n",
       "Brown Woodland Warbler & 519 & 1.00 & 0.01 & 0.02 & 1.00 & 0.12 & 0.22 & 0.86 \\\\\n",
-      "Yellow-whiskered Greenbul & 221 & 0.93 & 0.40 & 0.56 & 0.94 & 0.53 & 0.68 & 0.69 \\\\\n",
+      "Yellow-whiskered Greenbul & 221 & 0.00 & 0.00 & 0.00 & 0.94 & 0.53 & 0.68 & 0.69 \\\\\n",
       "Grey-backed Camaroptera & 179 & 1.00 & 0.14 & 0.25 & 1.00 & 0.01 & 0.02 & 0.66 \\\\\n",
       "Common Bulbul & 150 & 0.78 & 0.19 & 0.30 & 0.88 & 0.05 & 0.09 & 0.67 \\\\\n",
       "Chestnut-throated Apalis & 132 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.42 \\\\\n",
       "Yellow-rumped Tinkerbird & 124 & 1.00 & 0.27 & 0.43 & 0.95 & 0.33 & 0.49 & 0.58 \\\\\n",
       "Hartlaub's Turaco & 113 & 0.93 & 0.34 & 0.49 & 0.94 & 0.29 & 0.45 & 0.62 \\\\\n",
-      "Tropical Boubou & 113 & 1.00 & 0.22 & 0.36 & 1.00 & 0.19 & 0.33 & 0.49 \\\\\n",
+      "Tropical Boubou & 113 & 0.00 & 0.00 & 0.00 & 1.00 & 0.19 & 0.33 & 0.49 \\\\\n",
       "Red-fronted Parrot & 100 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.53 \\\\\n",
       "Cinnamon Bracken Warbler & 82 & 0.51 & 0.22 & 0.31 & 0.56 & 0.40 & 0.47 & 0.48 \\\\\n",
       "Mountain Yellow Warbler & 77 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.53 \\\\\n",
@@ -463,13 +475,13 @@
       "Common Name & Number of Recordings & BirdNET F1-Score & Perch F1-Score & MLP F1-Score \\\\\n",
       "\\midrule\n",
       "Brown Woodland Warbler & 519 & 0.02 & 0.22 & 0.86 \\\\\n",
-      "Yellow-whiskered Greenbul & 221 & 0.56 & 0.68 & 0.69 \\\\\n",
+      "Yellow-whiskered Greenbul & 221 & 0.00 & 0.68 & 0.69 \\\\\n",
       "Grey-backed Camaroptera & 179 & 0.25 & 0.02 & 0.66 \\\\\n",
       "Common Bulbul & 150 & 0.30 & 0.09 & 0.67 \\\\\n",
       "Chestnut-throated Apalis & 132 & 0.00 & 0.00 & 0.42 \\\\\n",
       "Yellow-rumped Tinkerbird & 124 & 0.43 & 0.49 & 0.58 \\\\\n",
       "Hartlaub's Turaco & 113 & 0.49 & 0.45 & 0.62 \\\\\n",
-      "Tropical Boubou & 113 & 0.36 & 0.33 & 0.49 \\\\\n",
+      "Tropical Boubou & 113 & 0.00 & 0.33 & 0.49 \\\\\n",
       "Red-fronted Parrot & 100 & 0.00 & 0.00 & 0.53 \\\\\n",
       "Cinnamon Bracken Warbler & 82 & 0.31 & 0.47 & 0.48 \\\\\n",
       "Mountain Yellow Warbler & 77 & 0.00 & 0.00 & 0.53 \\\\\n",
@@ -546,7 +558,7 @@
        "      <th>23</th>\n",
        "      <td>Yellow-whiskered Greenbul</td>\n",
        "      <td>221</td>\n",
-       "      <td>0.561514</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.680115</td>\n",
        "      <td>0.692913</td>\n",
        "    </tr>\n",
@@ -594,7 +606,7 @@
        "      <th>18</th>\n",
        "      <td>Tropical Boubou</td>\n",
        "      <td>113</td>\n",
-       "      <td>0.362319</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.325926</td>\n",
        "      <td>0.488372</td>\n",
        "    </tr>\n",
@@ -733,13 +745,13 @@
       "text/plain": [
        "                   Common Name  Number of Recordings  BirdNET F1-Score  \\\n",
        "1       Brown Woodland Warbler                   519          0.019084   \n",
-       "23   Yellow-whiskered Greenbul                   221          0.561514   \n",
+       "23   Yellow-whiskered Greenbul                   221          0.000000   \n",
        "10     Grey-backed Camaroptera                   179          0.245098   \n",
        "8                Common Bulbul                   150          0.301075   \n",
        "3     Chestnut-throated Apalis                   132          0.000000   \n",
        "22    Yellow-rumped Tinkerbird                   124          0.430380   \n",
        "11           Hartlaub's Turaco                   113          0.493506   \n",
-       "18             Tropical Boubou                   113          0.362319   \n",
+       "18             Tropical Boubou                   113          0.000000   \n",
        "15          Red-fronted Parrot                   100          0.000000   \n",
        "5     Cinnamon Bracken Warbler                    82          0.307692   \n",
        "13     Mountain Yellow Warbler                    77          0.000000   \n",
@@ -792,14 +804,6 @@
    "source": [
     "res_df_ordered[['Common Name', 'Number of Recordings','BirdNET F1-Score','Perch F1-Score','MLP F1-Score']]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3165f40f-bfd5-47c2-9a33-cfb30a9f2e4f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -818,7 +822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
