--- a/code/mlp-multi-species.ipynb
+++ b/code/mlp-multi-species.ipynb
@@ -6,7 +6,11 @@
    "metadata": {},
    "source": [
     "# Finetuned Multi-Label Model\n",
-    "This notebook trains a multilabel multilayer perceptron model to classify species observed in Mt Kenya. We use embeddings obtained from the  Google's Perch Model ([Bird Vocalization Classifier](https://www.kaggle.com/models/google/bird-vocalization-classifier))."
+    "This notebook trains a multilabel multilayer perceptron model to classify species observed in Mt Kenya. We use embeddings obtained from the  Google's Perch Model ([Bird Vocalization Classifier](https://www.kaggle.com/models/google/bird-vocalization-classifier)).\n",
+    "\n",
+    "The embeddings for all files are obtained by running the code below. Embeddings for recordings with single species are part of the [Ndege Zetu dataset](https://datadryad.org/dataset/doi:10.5061/dryad.d51c5b0c7).\n",
+    "\n",
+    "* `python compute_file_embeddings.py -i ../audio/ -e ../embeddings/`"
    ]
   },
   {
@@ -19,12 +23,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-27 06:35:48.187930: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-02-27 06:35:48.188040: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-02-27 06:35:48.348548: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-02-27 06:35:48.688445: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-02-27 06:58:55.900241: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-02-27 06:58:55.900311: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-02-27 06:58:55.902486: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-02-27 06:58:55.931924: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-02-27 06:35:50.527129: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2025-02-27 06:58:57.833867: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -407,8 +411,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-27 06:35:58.114250: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2025-02-27 06:35:58.810190: W tensorflow/core/common_runtime/gpu/gpu_device.cc:2256] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "2025-02-27 06:59:04.896077: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:901] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2025-02-27 06:59:04.973465: W tensorflow/core/common_runtime/gpu/gpu_device.cc:2256] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
       "Skipping registering GPU devices...\n"
      ]
     },
@@ -451,7 +455,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f22b0c834d0>]"
+       "[<matplotlib.lines.Line2D at 0x7f2130417b90>]"
       ]
      },
      "execution_count": 18,
