add information on Ndege zetu dataset

--- a/code/lr-mlp-single-species.ipynb
+++ b/code/lr-mlp-single-species.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "We demonstrate the classification of bird species observed in the Mt Kenya ecosystem leveraging open source models. In particular we demonstrate the use of embeddings obtained from Google's [Bird Vocalization Classifier](https://www.kaggle.com/models/google/bird-vocalization-classifier) to train classifiers for the species observed.\n",
     "\n",
-    "In this notebook we use logistic regression and a multilayer perceptron to classify bird species from the Mt Kenya ecosystem using embeddings extracted from the bird vocalisation classifier as features."
+    "In this notebook we use logistic regression and a multilayer perceptron to classify bird species from the Mt Kenya ecosystem using embeddings extracted from the bird vocalisation classifier as features.\n",
+    "\n",
+    "The data used in the notebook are part of the [Ndege Zetu dataset](https://datadryad.org/dataset/doi:10.5061/dryad.d51c5b0c7)."
    ]
   },
   {
