--- a/code/mlp-multi-species.ipynb
+++ b/code/mlp-multi-species.ipynb
@@ -8,7 +8,7 @@
     "# Finetuned Multi-Label Model\n",
     "This notebook trains a multilabel multilayer perceptron model to classify species observed in Mt Kenya. We use embeddings obtained from the  Google's Perch Model ([Bird Vocalization Classifier](https://www.kaggle.com/models/google/bird-vocalization-classifier)).\n",
     "\n",
-    "The embeddings for all files are obtained by running the code below. Embeddings for recordings with single species are part of the [Ndege Zetu dataset](https://datadryad.org/dataset/doi:10.5061/dryad.d51c5b0c7).\n",
+    "The embeddings for all files are obtained by running the code below. Audio recordings and embeddings for recordings with single species are part of the [Ndege Zetu dataset](https://datadryad.org/dataset/doi:10.5061/dryad.d51c5b0c7).\n",
     "\n",
     "* `python compute_file_embeddings.py -i ../audio/ -e ../embeddings/`"
    ]
@@ -52,7 +52,6 @@
     "\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "\n",
     "from keras.utils import to_categorical, set_random_seed"
    ]
